--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,7 @@ table {
   margin: auto;
   font-size: 0.9em;
   min-width: 400px;
+  background-color: whitesmoke;
 }
 
 thead tr {
@@ -96,6 +97,10 @@ tbody tr {
 
 tbody tr:nth-of-type(even) {
   background-color: #696b70;
+}
+
+tbody tr:nth-of-type(odd) {
+  background-color: rgb(165, 165, 165);
 }
 
 .logo {
@@ -133,4 +138,54 @@ tbody tr:nth-of-type(even) {
   font-weight: 300;
   cursor: pointer;
   transition: all 0.1s ease-in-;
+}
+
+.edit-form-container {
+  width: 100%;
+  min-width: 600px;
+  position: fixed;
+  inset: 0;
+  margin: auto;
+  height: fit-content;
+  width: fit-content;
+  background: rgb(224, 224, 224);
+  padding: 80px;
+}
+
+.edit-form {
+  width: fit-content;
+  background: rgb(240, 240, 240);
+}
+
+.edit-input-group {
+  flex: 1;
+}
+.edit-background {
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background: black;
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.edit-label {
+  color: blueviolet;
+  margin-bottom: 16px;
+  display: inline-block;
+}
+
+.close-button {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+
+.edit-input {
+  border: 1px solid gray;
+  border-radius: 10;
 }
